Ques2_Auto/2048-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2048-deploy
  labels:
    app: app2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2048
  template:
    metadata:
      labels:
        app: app2048
    spec:
      serviceAccountName: svc-opengame
      containers:
        - name: app2048
          image: docker.io/httpd:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
