Ques2_Auto/2048-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2048-service
  labels:
    app: app2048
spec:
  selector:
    app: app2048
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
